--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,18 @@
   background: linear-gradient(#e66465, #9198e5);
 }
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 * {
   user-select: none;
 }
